unpackaged/main/default/objects/Case_Content_Purge_Process__c/Case_Content_Purge_Process__c.object-meta.xml
<CustomObject>
    <label>Case Content Purge Process</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Case Content Purge Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Content Purge Process</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>