unpackaged/main/default/objects/Case_Content_Purge_Process__c/fields/Attachments_Affected__c.field-meta.xml
<CustomField>
    <fullName>Attachments_Affected__c</fullName>
    <label>Attachments Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>