unpackaged/main/default/objects/Case_Content_Purge_Process__c/fields/Case_Content_Purge_Action__c.field-meta.xml
<CustomField>
    <fullName>Case_Content_Purge_Action__c</fullName>
    <label>Case Content Purge Action</label>
    <referenceTo>Case_Content_Purge_Action__c</referenceTo>
    <relationshipLabel>Case Content Purge Process</relationshipLabel>
    <relationshipName>Case_Content_Purge_Process</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>