unpackaged/main/default/objects/Case_Content_Purge_Process__c/fields/Email_Affected__c.field-meta.xml
<CustomField>
    <fullName>Email_Affected__c</fullName>
    <label>Email Affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>