unpackaged/main/default/objects/Case_Content_Purge_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Content_Purge_Action__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cases_Affected__c</columns>
    <columns>Email_Affected__c</columns>
    <columns>Attachments_Affected__c</columns>
    <columns>Files_Affected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>